[package]
name = "ntoseye"
version = "0.2.1"
edition = "2024"
authors = [ "dmaivel" ]
description = "Windows kernel debugger for Linux hosts running Windows under KVM/QEMU"
license = "MIT"
repository = "https://github.com/dmaivel/ntoseye"
readme = "README.md"
keywords = [ "virtualization", "introspection", "memory", "windbg", "kvm" ]
categories = [ "security", "os" ]

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.4"
argh = "0.1.13"
fst = "0.4.7"
iced-x86 = "1.21.0"
indicatif = "0.18.3"
memmap2 = "0.9.9"
nix = { version = "0.30.1", features = [ "process", "uio" ] }
nu-ansi-term = "0.50.3"
owo-colors = "4.2.3"
pdb = "0.8.0"
pelite = "0.10.0"
reedline = "0.44.0"
reqwest = { version = "0.12.28", features = [ "blocking" ] }
single-instance = "0.3.3"
strum = "0.27.2"
strum_macros = "0.27.2"
tabled = { version = "0.20.0", features = [ "ansi" ] }
zerocopy = { version = "0.8.31", features = [ "derive" ] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
